crates/test-files/fixtures/compile_errors/return_complex_struct.fe
struct Foo {
    pub bar: Array<u256, 2>
}

contract C {
    pub fn f() -> Foo {
        return Foo(bar: [1, 2])
    }
}
